# mate-backgrounds

./: Makefile.am  README  autogen.sh  configure.ac
abstract/: Makefile.am
desktop/: Makefile.am
nature/: Makefile.am
