#   Copyright (C) 2022  Libre MATE
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
# 02110-1301, USA.

AC_INIT([mate-backgrounds],
        [1.26.0],
        [https://github.com/Libre-MATE/mate-backgrounds/issues],
        [mate-backgrounds],
        [https://github.com/Libre-MATE/mate-backgrounds/])
AC_COPYRIGHT([Copyright (C) 2022 Libre MATE])
AM_INIT_AUTOMAKE([1.11 no-dist-gzip dist-xz tar-ustar check-news])
AM_SILENT_RULES([yes])
AM_MAINTAINER_MODE

AM_GNU_GETTEXT_VERSION([0.19.8])
AM_GNU_GETTEXT([external])

AC_CONFIG_FILES([
Makefile
abstract/Makefile
desktop/Makefile
nature/Makefile
po/Makefile.in
])
AC_OUTPUT
